fixed width of about title on mobile

--- a/src/Styles/About.css
+++ b/src/Styles/About.css
@@ -26,7 +26,7 @@
 	.about-title h1 {
 		font-family: 'Expletus Sans', cursive;
 		height: 40px;
-		width: 130px;
+		width: 150px;
 		line-height: 40px;
 		vertical-align: middle;
 		font-weight: bold;
